2008-12-06 11:04-EST Bernard Cafarelli <voyageur>
	Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile.preamble: Corrects bug #25001.

2008-12-02 02:58-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m
	* GormCore/GormDocument.m
	* GormCore/GormFilePrefsManager.m
	* GormCore/GormHelpInspector.m
	* GormCore/GormPrivate.h
	* GormCore/GormPrivate.m
	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m
	* Palettes/1Windows/GormWindowSizeInspector.m
	* Palettes/1Windows/WindowsPalette.m
	* Plugins/Gorm/GormGormWrapperBuilder.m
	* Plugins/Nib/GormNibWrapperBuilder.m
	* Plugins/Nib/GormNibWrapperLoader.h: Use new header files for 
	nib/gorm loading.

2008-11-27 11:43-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Remove default install to SYSTEM, per bug #24673.
	* Plugins/Gorm/GormGormWrapperLoader.m: Minor grammatical correction.

2008-11-13 23:36-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Change to apply labels in the document
	to cells in a matrix.
	* GormCore/GormFilePrefsManager.m: Update version to 1.2.7
	* GormInfo.plist: Same
	* Version: Same

2008-10-25 18:40-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: 1.2.6
	
2008-10-22 22:30-EDT Wolfgang Lux <wolfgang.lux@gmail.com>
	Patch committed by: Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBObjectAdditions.m: Remove duplicate method implementations
	from here to fix issues on Darwin.

2008-10-19 21:50-EDT Wolfgang Lux <wolfgang.lux@gmail.com>
	Patch committed by: Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGenericEditor.h
	* GormCore/GormGenericEditor.m
	* GormCore/GormImageEditor.m
	* GormCore/GormObjectEditor.m
	* GormCore/GormSoundEditor.m: Observe notification IBWillCloseDocument
	and remove the reference to the document when that is recieved to 
	avoid a crash.